--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,8 +20,8 @@
   <li class="nav-item">
     <a class="nav-link" href="/dashboard">Dashboard</a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/logout" class="logout">Logout</a>
+  <li class="nav-item" class="logout" id="logout">
+    <button class="nav-link" class="logout">Logout</button>
   </li>
   {{else}}
   <li class="nav-item">
